--- a/Arduino/Ugo-TinyPICO/data/webconfig.html
+++ b/Arduino/Ugo-TinyPICO/data/webconfig.html
@@ -2,96 +2,112 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Ugo-ESP32 Configuration</title>
-    <link rel="stylesheet" type="text/css" href="common.css"></style>
-    <style media="all and (max-width:520px)">
-        .wrapper {
-            padding: 20px 0;
-        }
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <title>Ugo-ESP32 Configuration</title>
+        <link rel="stylesheet" type="text/css" href="common.css">
+        </style>
+        <style media="all and (max-width:520px)">
+                .wrapper {
+                        padding: 20px 0;
+                }
 
-        .c {
-            padding: 25px 15px;
-            border-radius: 0;
-        }
-    </style>
+                .c {
+                        padding: 25px 15px;
+                        border-radius: 0;
+                }
+        </style>
 </head>
 
 <body>
-    <div class="wrapper">
-        <div class="bat">
-            <p>Battery level: %BATTERY_CHARGING_OR_PERCENT_HTML% (%BATTERY_VOLTAGE%V)</p>
-            <div>
-                <div class="bat-%BATTERY_CLASS%"></div>
-            </div>
+        <div class="wrapper">
+                <div class="bat">
+                        <p>Battery level: %BATTERY_CHARGING_OR_PERCENT_HTML% (%BATTERY_VOLTAGE%V)</p>
+                        <div>
+                                <div class="bat-%BATTERY_CLASS%"></div>
+                        </div>
+                </div>
+                <div class="c">
+                        <form method="post" action="/">
+                                <h1>Ugo-ESP32 Configuration</h1>
+                                <p>Press any button to go back to normal operation.</p>
+                                <h2>Network settings</h2>
+                                <p>Set your network credentials here.</p>
+                                <div class="r"><label for="id">WiFi SSID</label><input type="text" id="id" name="id"
+                                                value="%ID%">
+                                </div>
+                                <div class="r"><label for="pw">WiFi Password</label><input type="password" id="pw"
+                                                name="pw" value="%PW%"></div>
+                                <h2>Static IP settings (optional)</h2>
+                                <p>In some cases this might speed up response time. IP, Gateway and Subnet need to be
+                                        all set together,
+                                        and IP should be reserved in
+                                        the router's DHCP settings. Primary and secondary DNS are optional, and if not
+                                        provided they will
+                                        default to Google DNS (8.8.8.8 and 8.8.4.4).
+                                        <br>To help you reserve the IP in your router, this is the MAC address of this
+                                        device: <span class="mac">
+                                                %MAC%
+                                        </span></p>
+                                <div class="r"><label for="ip">IP Address (optional):</label><input type="text" id="ip"
+                                                name="ip" value="%IP%"></div>
+                                <div class="r"><label for="gw">Gateway IP (optional):</label><input type="text" id="gw"
+                                                name="gw" value="%GW%"></div>
+                                <div class="r"><label for="sn">Subnet mask (optional):</label><input type="text" id="sn"
+                                                name="sn" value="%SN%"></div>
+                                <div class="r"><label for="d1">Primary DNS IP (optional):</label><input type="text"
+                                                id="d1" name="d1" value="%D1%"></div>
+                                <div class="r"><label for="d2">Secondary DNS IP (optional):</label><input type="text"
+                                                id="d2" name="d2" value="%D2%"></div>
+                                <h2>MQTT Authentication (optional)</h2>
+                                <p>Set your MQTT credentials here. Leave them empty for anonymous connections.</p>
+                                <div class="r"><label for="mqttuser">MQTT User</label><input type="text" id="mqttuser"
+                                                name="mqttuser" value="%MQTTUSER%">
+                                </div>
+                                <div class="r"><label for="mqttpass">MQTT Password</label><input type="password"
+                                                id="mqttpass" name="mqttpass" value="%MQTTPASS%"></div>
+                                <h2>Button settings</h2>
+                                <p>Assign a target URL for each button.<br>Use <b>[blvl]</b> shortcode to add battery
+                                        percentage.<br>Use
+                                        <b>[chrg]</b> shortcode to add battery voltage.<br>Use <b>[mac]</b> to add mac
+                                        address (as unique
+                                        identifier).<br>For example:
+                                        "http://example.com/?trigger=button1&battery_percentage=[blvl]&mac=[mac]"</p>
+                                <p>You can set MQTT topics to publish as a URI.<br>Use mqtt:// as a protocol, then
+                                        specify the broker
+                                        address and port, finally the full topic as a URI path.<br>For example:
+                                        "mqtt://192.168.1.202:1883/home-assistant/light/1/command"</p>
+                                <div class="r"><label for="b1">Button 1 url</label><input type="text" id="b1" name="b1"
+                                                value="%B1%">
+                                </div>
+                                <div class="r"><label for="b2">Button 2 url</label><input type="text" id="b2" name="b2"
+                                                value="%B2%">
+                                </div>
+                                <div class="r"><label for="b3">Button 3 url</label><input type="text" id="b3" name="b3"
+                                                value="%B3%">
+                                </div>
+                                <div class="r"><label for="b4">Button 4 url</label><input type="text" id="b4" name="b4"
+                                                value="%B4%">
+                                </div>
+                                <h2>Button combinations</h2>
+                                <p>Push two neighbouring buttons together and have them act as a virtual button.</p>
+                                <div class="r"><label for="b5">B1+B2 url</label><input type="text" id="b5" name="b5"
+                                                value="%B5%">
+                                </div>
+                                <div class="r"><label for="b6">B2+B3 url</label><input type="text" id="b6" name="b6"
+                                                value="%B6%">
+                                </div>
+                                <div class="r"><label for="b7">B3+B4 url</label><input type="text" id="b7" name="b7"
+                                                value="%B7%">
+                                </div>
+                                <div class="r"><button type="submit">Save and reboot</button></div>
+                        </form>
+                </div>
+                <div class="github">
+                        <p>Firmware V%FIRMWARE_VERSION%, check out <a href="https://github.com/ceoloide/Ugo-ESP32"
+                                        target="_blank"><strong>Ugo-ESP32</strong> on GitHub</a></p>
+                </div>
         </div>
-        <div class="c">
-            <form method="post" action="/">
-                <h1>Ugo-ESP32 Configuration</h1>
-                <p>Press any button to go back to normal operation.</p>
-                <h2>Network settings</h2>
-                <p>Set your network credentials here.</p>
-                <div class="r"><label for="id">WiFi SSID</label><input type="text" id="id" name="id"
-                        value="%ID%">
-                </div>
-                <div class="r"><label for="pw">WiFi Password</label><input type="password" id="pw" name="pw"
-                        value="%PW%"></div>
-                <h2>Static IP settings (optional)</h2>
-                <p>In some cases this might speed up response time. IP, Gateway and Subnet need to be all set together,
-                    and IP should be reserved in
-                    the router's DHCP settings. Primary and secondary DNS are optional, and if not provided they will
-                    default to Google DNS (8.8.8.8 and 8.8.4.4).
-                    <br>To help you reserve the IP in your router, this is the MAC address of this device: <span
-                        class="mac">
-                        %MAC%
-                    </span></p>
-                <div class="r"><label for="ip">IP Address (optional):</label><input type="text" id="ip" name="ip"
-                        value="%IP%"></div>
-                <div class="r"><label for="gw">Gateway IP (optional):</label><input type="text" id="gw" name="gw"
-                        value="%GW%"></div>
-                <div class="r"><label for="sn">Subnet mask (optional):</label><input type="text" id="sn" name="sn"
-                        value="%SN%"></div>
-                <div class="r"><label for="d1">Primary DNS IP (optional):</label><input type="text" id="d1" name="d1"
-                        value="%D1%"></div>
-                <div class="r"><label for="d2">Secondary DNS IP (optional):</label><input type="text" id="d2" name="d2"
-                        value="%D2%"></div>
-                <h2>Button settings</h2>
-                <p>Assign a target URL for each button.<br>Use <b>[blvl]</b> shortcode to add battery percentage.<br>Use
-                    <b>[chrg]</b> shortcode to add battery voltage.<br>Use <b>[mac]</b> to add mac address (as unique
-                    identifier).<br>For example:
-                    "http://example.com/?trigger=button1&battery_percentage=[blvl]&mac=[mac]"</p>
-                <div class="r"><label for="b1">Button 1 url</label><input type="text" id="b1" name="b1"
-                        value="%B1%">
-                </div>
-                <div class="r"><label for="b2">Button 2 url</label><input type="text" id="b2" name="b2"
-                        value="%B2%">
-                </div>
-                <div class="r"><label for="b3">Button 3 url</label><input type="text" id="b3" name="b3"
-                        value="%B3%">
-                </div>
-                <div class="r"><label for="b4">Button 4 url</label><input type="text" id="b4" name="b4"
-                        value="%B4%">
-                </div>
-                <h2>Button combinations</h2>
-                <p>Push two neighbouring buttons together and have them act as a virtual button.</p>
-                <div class="r"><label for="b5">B1+B2 url</label><input type="text" id="b5" name="b5"
-                        value="%B5%">
-                </div>
-                <div class="r"><label for="b6">B2+B3 url</label><input type="text" id="b6" name="b6"
-                        value="%B6%">
-                </div>
-                <div class="r"><label for="b7">B3+B4 url</label><input type="text" id="b7" name="b7"
-                        value="%B7%">
-                </div>
-                <div class="r"><button type="submit">Save and reboot</button></div>
-            </form>
-        </div>
-        <div class="github">
-            <p>Firmware V%FIRMWARE_VERSION%, check out <a href="https://github.com/ceoloide/Ugo-ESP32"
-                    target="_blank"><strong>Ugo-ESP32</strong> on GitHub</a></p>
-        </div>
-    </div>
 </body>
 
 </html>
